--- a/badusage.yml
+++ b/badusage.yml
@@ -6,8 +6,8 @@
   port: 22
   gather_facts: no
   roles:
-#  - droits777
-#  - stickybit
-#  - gdbautologoutdisable
-#  - rselinux
+  - droits777
+  - stickybit
+  - gdbautologoutdisable
+  - rselinux
   - bashrcsec
