--- a/roles/tomcat/tasks/install.yml
+++ b/roles/tomcat/tasks/install.yml
@@ -30,14 +30,19 @@
     src: ./files/apache-tomcat-8.5.53.tar
     dest: /tmp/apache-tomcat-8.5.53.tar
 
-#- name: Extract Tomcat archive
-#  command: tar xvf /opt/apache-tomcat-8.5.53.tar -C /opt/tomcat
-
 - name: Tomcat | Download & Extract Tomcat
   unarchive:
+    extra_opts: ['--strip-components=1']
     src: /tmp/apache-tomcat-8.5.53.tar
     remote_src: yes
     dest: "{{ tomcat_install_path }}"
     owner: "{{ tomcat_user }}"
     group: "{{ tomcat_group }}"
     mode: 0750
+
+- name: Tomcat | Copy Daemon script
+  template:
+    src: tomcat.service.j2
+    dest: /lib/systemd/system/tomcat.service
+    mode: 0644
+  notify: restart tomcat
